--- a/src/schedule/Schedule.scss
+++ b/src/schedule/Schedule.scss
@@ -6,34 +6,66 @@
     margin: auto;
     .dates {
         display: flex;
-        flex-direction: row;
-        margin: 0 30px 0 50px;
-        padding-top: 15px;
+        @media (min-width: $desktopMobileToggleWidth) {
+            flex-direction: row;
+            margin: 0 30px 0 50px;
+            padding-top: 15px;
+        }
+        @media (max-width: $desktopMobileToggleWidth) {
+            // flex-direction: column;
+
+            flex-direction: row;
+            margin: 0 15px 0 15px;
+            padding-top: 7px;
+        }
         .date {
             background-color: $purple;
             padding: 5px 10px;
-            border-radius: 5px 5px 0 0;
-            margin-right: 5px;
             cursor: pointer;
+            @media (min-width: $desktopMobileToggleWidth) {
+                border-radius: 5px 5px 0 0;
+                margin-right: 5px;
+            }
+            @media (max-width: $desktopMobileToggleWidth) {
+                h3 {
+                    font-size: 15px;
+                }
+                padding: 3px 7px;
+                border-radius: 5px 5px 0 0;
+                margin-right: 5px;
+            }
         }
     }
     .events {
         background-color: white;
-        padding: 30px;
-        margin: 0 30px 30px 30px;
         border-radius: 15px;
+        @media (min-width: $desktopMobileToggleWidth) {
+            padding: 30px;
+            margin: 0 30px 30px 30px;
+        }
+        @media (max-width: $desktopMobileToggleWidth) {
+            padding: 15px;
+        }
         .event {
             background-color: $lightGrey;
-            margin: auto;
             border-radius: 15px;
-            margin: 10px;
-            padding: 20px 15px;
             color: $darkGrey;
+            @media (min-width: $desktopMobileToggleWidth) {
+                margin: 10px;
+                padding: 20px 15px;
+            }
+            @media (max-width: $desktopMobileToggleWidth) {
+                margin: 7px 0 7px 0;
+                padding: 10px 7px;
+            }
             .details {
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 width: 50vw;
+                @media (max-width: $desktopMobileToggleWidth) {
+                    width: 100%;
+                }
                 .start,
                 .end,
                 .presenter {
