--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@
 @import "./schedule/Schedule";
 @import "./sponsors/Sponsors";
 @import "./team/Team";
+@import "Sponsorship";
 
 html {
   overflow-x: hidden;
