--- a/src/contact/Contact.scss
+++ b/src/contact/Contact.scss
@@ -4,12 +4,14 @@
     width: 100vw;
     margin: auto;
     margin-bottom: 30px;
-    .blue {
+    .blue,
+    a,
+    p {
+        font-size: 15px;
         padding-top: 15px;
         color: $darkBlue;
-        font-weight: 600;
-    }
-    p {
+        font-weight: 400;
+        text-decoration: none;
         text-align: center;
         margin: 0;
     }
