--- a/src/landing/Landing.scss
+++ b/src/landing/Landing.scss
@@ -22,7 +22,20 @@
     top: 0;
     color: $purple;
     right: 0;
-    padding: 15px;
+    padding: 0 10px;
+    margin: 15px;
+    background-color: white;
+    border-radius: 7px;
+    text-transform: uppercase;
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+    cursor: pointer;
+    &:hover {
+      border: 0px solid;
+      outline: 1px solid;
+      box-shadow: inset 0 0 15px white, 0 0 20px white;
+      outline-color: $buttonHover;
+      outline-offset: 20px;
+    }
   }
   .register {
     margin: auto;
