--- a/src/sponsors/Sponsors.scss
+++ b/src/sponsors/Sponsors.scss
@@ -1,20 +1,43 @@
 @import "../variables";
 
-
 .sponsors {
     width: 90vw;
     margin: auto;
+    .panel-fit {
+        margin: 1% auto;
+        width: fit-content;
+        background-color: $darkBlue;
+        padding: 20px 15px;
+        border-radius: 15px;
+    }
     p {
         text-align: center;
-        padding: 0;
-        margin: 0 auto;
     }
-    a:link{
-        color: $fontColor;
-        font-weight: 600;
-        transition: 0.3s;
+    a {
+        font-size: $header3FontSize;
+        @media (max-width: $desktopMobileToggleWidth) {
+            h3 {
+                font-size: $mobileHeader3FontSize;
+            }
+        }
+        text-decoration: none;
+        border: 0em;
+        border-radius: 7px;
+        width: 100%;
+        background: $fontColor;
+        transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+        cursor: pointer;
+        margin: 0 10px;
+        text-transform: uppercase;
+        color: $purple;
+        font-weight: bold;
+        padding: 0 10px;
         &:hover {
-            color: $darkBlue;
+            border: 0px solid;
+            outline: 1px solid;
+            box-shadow: inset 0 0 15px white, 0 0 20px white;
+            outline-color: $buttonHover;
+            outline-offset: 20px;
         }
     }
 }
