--- a/src/about/About.scss
+++ b/src/about/About.scss
@@ -7,6 +7,7 @@
         img {
             padding-left: 90px;
             height: 60vh;
+            width: auto;
         }
     }
     @media (max-width: $desktopMobileToggleWidth) {
@@ -14,7 +15,8 @@
         img {
             padding-left: 0;
             padding-top: 25px;
-            width: inherit;
+            width: 100%;
+            height: auto;
         }
     }
 }
